Version 8.1.0 (8 Mar 2021)
-------------------------------
(1) Fixed bug in dictionary lookup: A dictionary entry with no children (as a
    counterexample: 'hed' with children 'hedde' and 'hede') succesfully matched
    word starting with the dictionary entry, but with extra characters.
    For example, 'Joel' was lemmatized to 'Joe' if 'Joe' didn't have children
    in the dictionary.
(2) Added new output functions $p and $r that can be included in the -B option.
    $p evaluates to the pattern part of the rule that constructs the lemma from
       the input word.
    $r evaluates to the replacement part of the rule that constructs the lemma
       from the input word.

-------------------------------
Version 8.0.5 (1 Sep 2020)
-------------------------------
Fixed bug in dictionary lookup for tagged words.

-------------------------------
Version 8.0.4 (13 May 2020)
-------------------------------
Fixed bug that disabled the use of rules if 
(1) the input is tagged and
(2) there is no flexrules file without a tag name extension, e.g.:

    flexrules       <--- this one missing
    flexrules.ADJ
    flexrules.ADV
    ...

(An extensionless flexrules file is used as a fall-back if a token has an
unknown tag.)

-------------------------------
Version 8.0.3 (14 January 2020)
-------------------------------
Option -l+ now works as intended.
Several improvements of C++ source, such as replacing 'typedef enum' with
'enum class' for better scoping.

-------------------------------
Version 8.0.2 (13 January 2020)
-------------------------------
New format option $r that prints the replacement. $p prints the pattern, and
not both pattern and replacement as in version 8.0.1.

-------------------------------
Version 8.0.1 (9 January 2020)
-------------------------------
New format option $p that prints the rule (pattern and replacement)
responsible for how the lemma is constructed from the input word.
Turned on with compiler option -DPRINTRULE. (Work in progress.)
