@@ -383,7 +383,8 @@ OptReturnTp optionStruct::doSwitch(int c,char * locoptarg,char * progname)
             printf("    -B<format string>\tdefault:" commandlineQuote "%s" commandlineQuote "\n",Default_B_format);  
 #endif
             LOG1LINE("        Output format for data pertaining to the base form, as predicted by\n"
-                   "        flex pattern rules. See -b\n"
+                   "        flex pattern rules.\n"
+                   "        The functions $p and $r are only valid if there is no -W option. See there."
                    "        $p pattern part of the rule by which lemma is constructed.\n"
                    "        $r replacement part of the rule by which lemma is constructed.\n"
                    "        See -b for more options.\n"
@@ -399,6 +400,11 @@ OptReturnTp optionStruct::doSwitch(int c,char * locoptarg,char * progname)
                    "                       (If that is the case, the lemmatiser also generates lemma(s)\n"
                    "                       using the flex pattern rules, so you can choose.)\n"
                    "               (blank) full form in dictionary\n"
+                   "        Note that if there is no -W option, the $p and $r functions can be put in the -B option."
+                   "        $p pattern part of the rule by which lemma is constructed.\n"
+                   "        $r replacement part of the rule by which lemma is constructed.\n"
+                   "           (Note that the $p and $r functions can be put in the -B option\n"
+                   "            if there is no -W option.)\n"
                    "        \\t tab\n"
                    "        $X?, [X]? Do not output X. (X can be tested, though).\n"
                    "        [X]+  Output X only if X occurs at least once. (X is an expression\n"
